kubernetes/auth-service.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: auth-service
  namespace: it-diagnostics
spec:
  replicas: 1
  selector:
    matchLabels:
      app: auth-service
  template:
    metadata:
      labels:
        app: auth-service
      annotations:
        prometheus.io/scrape: "true"
        prometheus.io/path: /metrics
        prometheus.io/port: "5000"
    spec:
      containers:
      - name: auth-service
        image: maxmedov/it-diagnostics-management-platform:auth_service
        imagePullPolicy: Always
        ports:
        - containerPort: 5000
        command: ["flask", "run", "--host=0.0.0.0", "--port=5000", "--debug"]

---
apiVersion: v1
kind: Service
metadata:
  name: auth-service
  namespace: it-diagnostics
spec:
  type: ClusterIP
  ports:
  - port: 5000
    targetPort: 5000
  selector:
    app: auth-service
