kubernetes/case-service.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: case-service
  namespace: it-diagnostics
spec:
  replicas: 1
  selector:
    matchLabels:
      app: case-service
  template:
    metadata:
      labels:
        app: case-service
      annotations:
        prometheus.io/scrape: "true"
        prometheus.io/path: /metrics
        prometheus.io/port: "5001"
    spec:
      containers:
      - name: case-service
        image: maxmedov/it-diagnostics-management-platform:case_service
        imagePullPolicy: Always
        ports:
        - containerPort: 5001
---
apiVersion: v1
kind: Service
metadata:
  name: case-service
  namespace: it-diagnostics
spec:
  type: ClusterIP
  ports:
  - port: 5001
    targetPort: 5001
  selector:
    app: case-service
