kubernetes/diagnostic-service.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: diagnostic-service
  namespace: it-diagnostics
spec:
  replicas: 1
  selector:
    matchLabels:
      app: diagnostic-service
  template:
    metadata:
      labels:
        app: diagnostic-service
      annotations:
        prometheus.io/scrape: "true"
        prometheus.io/path: /metrics
        prometheus.io/port: "5002"
    spec:
      containers:
      - name: diagnostic-service
        image: maxmedov/it-diagnostics-management-platform:diagnostic_service
        imagePullPolicy: Always
        ports:
        - containerPort: 5002
---
apiVersion: v1
kind: Service
metadata:
  name: diagnostic-service
  namespace: it-diagnostics
spec:
  type: ClusterIP
  ports:
  - port: 5002
    targetPort: 5002
  selector:
    app: diagnostic-service
