kubernetes/frontend.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: frontend
  namespace: it-diagnostics
spec:
  replicas: 1
  selector:
    matchLabels:
      app: frontend
  template:
    metadata:
      labels:
        app: frontend
    spec:
      containers:
      - name: frontend
        image: maxmedov/it-diagnostics-management-platform:frontend
        imagePullPolicy: Always
        ports:
        - containerPort: 3000
---
apiVersion: v1
kind: Service
metadata:
  name: frontend
  namespace: it-diagnostics
spec:
  type: NodePort
  ports:
  - port: 80
    targetPort: 3000
    nodePort: 30004
  selector:
    app: frontend
